# k8s-observability-prometheus-grafana

./: Dockerfile  README.md  project-flow.md  pyproject.toml
k8s/: deployment.yaml  service.yaml
src/: app.py
